added debug to find the problem to find tasks and create them